[package]
name = "bf_beavers"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
owo-colors = "3.4.0"
clap = { version = "3.1.18", features = ["derive"] }
crossterm = "0.23.2"
rayon = "1.5.3"
thousands = "0.2.0"

[profile.release]
debug = true
