[package]
name = "bf_beavers"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["interactive"]
interactive = ["dep:owo-colors", "dep:crossterm", "dep:thousands", "dep:clap"]

[dependencies]
rayon = "1.5.3"

owo-colors = { version = "3.4.0", optional = true }
clap = { version = "3.1.18", features = ["derive"], optional = true  }
crossterm = { version = "0.23.2", optional = true }
thousands = { version = "0.2.0", optional = true }

[profile.release]
debug = true
